# TPF_robotica

./: PRA_TPFinal_Parte_A.txt  README.md  setup_env.sh
archivos/: turtlebot3_maze.launch.py  turtlebot3_maze.world
archivos/my_png_model/: map.stl  model.config  model.sdf
archivos/turtlebot3_slam_mapper/: setup.cfg  setup.py
archivos/turtlebot3_slam_mapper/config/: slam_toolbox_params.yaml
archivos/turtlebot3_slam_mapper/launch/: python_slam_maze.launch.py
archivos/turtlebot3_slam_mapper/turtlebot3_slam_mapper/: python_slam_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlebot3_slam_mapper/lib/turtlebot3_slam_mapper/: python_slam_node
install/turtlebot3_slam_mapper/share/turtlebot3_slam_mapper/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_slam_mapper/share/turtlebot3_slam_mapper/launch/: python_slam_maze.launch.py
install/turtlebot3_slam_mapper/share/turtlebot3_slam_mapper/rviz/: slam_maze.rviz
log/: latest_build
